# i18n

./: CMakeLists.txt  DefaultLocale_8hpp-example.html  DefaultLocale_8hpp.html  DefaultLocale_8hpp_source.html  LICENCE  LocaleEN_8hpp-example.html  LocaleEN_8hpp.html  LocaleEN_8hpp_source.html  LocaleES_8hpp-example.html  LocaleES_8hpp.html  LocaleES_8hpp_source.html  LocaleFR_8hpp-example.html  LocaleFR_8hpp.html  LocaleFR_8hpp_source.html  LocaleIT_8hpp-example.html  LocaleIT_8hpp.html  LocaleIT_8hpp_source.html  Readme_8md.html  SupportedLocales_8hpp-example.html  SupportedLocales_8hpp.html  SupportedLocales_8hpp_source.html  SystemCode_8hpp-example.html  SystemCode_8hpp.html  SystemCode_8hpp_source.html  TestCXX11_8cpp-example.html  TestCXX11_8cpp.html  TestCXX20_8cpp-example.html  TestCXX20_8cpp.html  TypeTraits_8hpp.html  TypeTraits_8hpp_source.html  annotated.html  classI18n-members.html  classI18n.html  classILocale-members.html  classILocale.html  classes.html  conceptDerivedFrom.html  conceptIsTuple.html  concepts.html  cxx11_2I18n_8hpp.html  (+38 more)
.github/workflows/: cmake.yml  docs.yml
docs/: Doxyfile  Doxyfile_cxx11  Doxyfile_cxx20  Readme.md  index.html
includes/: I18n.hpp  ILocale.hpp
includes/cxx11/: I18n.hpp  ILocale.hpp  TypeTraits.hpp
includes/cxx20/: I18n.hpp
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_2.js  concepts_0.js  concepts_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_5.js  searchdata.js  (+2 more)
tests/: TestI18n.cpp
tests/cxx11/: TestCXX11.cpp  TestI18n.cpp
tests/cxx20/: TestCXX20.cpp  TestI18n.cpp
tests/includes/: DefaultLocale.hpp  LocaleEN.hpp  LocaleES.hpp  LocaleFR.hpp  LocaleIT.hpp  SupportedLocales.hpp  systemCode.hpp
